# forge

./: .gitignore  CHANGES.md  CONVCORRECT.md  Cargo.toml  INDEX.md  README.md  V1_COMPONENTS.md  WIDGET_PROMPT.md  ai.md  brainstorm.md  design.md  index.html  mdeditor.md  package-lock.json  package.json  tailwind.config.js  vite.config.ts
.cargo/: config.toml
.claude/: log-turn.sh  settings.json
.git.broken/: COMMIT_EDITMSG  FETCH_HEAD  ORIG_HEAD  config  index
.git.broken/logs/: HEAD
.git.broken/logs/refs/heads/: main
.git.broken/logs/refs/remotes/origin/: main
.git.broken/objects/pack/: pack-3c804c8d4014525f24f84b5cfa7d11a33cc17189.idx  pack-3c804c8d4014525f24f84b5cfa7d11a33cc17189.pack  pack-3c804c8d4014525f24f84b5cfa7d11a33cc17189.rev
.git.broken/refs/heads/: main
.git.broken/refs/remotes/origin/: main
.git.broken/refs/tags/: v0.2.0
.github/workflows/: release.yml
copilot-test/: .gitignore  Cargo.toml
copilot-test/src/: main.rs
copilot-test/static/: app.js  index.html  style.css
forge_ui/: App.jsx  Chat.jsx  Editor.jsx  Icons.jsx  Primitives.jsx  SettingsModal-ref.jsx  SettingsModal.jsx  Shell.jsx  forge_v2_ui.md  index.html  tokens.css
packaging/: build-appimage.sh  forge.desktop
src/: App.tsx  agent.rs  app.rs  auth.rs  buffer.rs  chat.rs  editor.rs  graph.rs  icons.rs  index.css  links.rs  llm.rs  main.rs  main.tsx  markdown.rs  search.rs  settings.rs  theme.rs
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/.cargo/: config.toml
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: agent.rs  binaries.rs  chat.rs  commands.rs  copilot.rs  deepgram.rs  edge_tts.rs  embedder.rs  gemini.rs  gtts.rs  latex.rs  lib.rs  links.rs  llm.rs  main.rs  models.rs  openai.rs  openai_compat.rs  search.rs  settings.rs  skills.rs  stt.rs  terminal.rs  vad.rs  voice.rs
src/components/: AISettingsModal.tsx  BacklinksPanel.tsx  Chat.tsx  ChatHistorySidebar.tsx  ChatTabView.tsx  ContextMenu.tsx  ConversationToggle.tsx  DocxViewer.tsx  Editor.tsx  ErrorBoundary.tsx  GeneralSettingsModal.tsx  GraphView.tsx  ImageViewer.tsx  LatexViewer.tsx  LeftRail.tsx  MarkdownPreview.tsx  PdfViewer.tsx  ResizeHandle.tsx  Search.tsx  SearchModal.tsx  SearchSnippet.tsx  Sidebar.tsx  TOCPanel.tsx  Terminal.tsx  TitleBar.tsx  VoiceInput.tsx
src/components/chat/: ChatComposer.tsx  ChatMarkdown.tsx  ChatModelPicker.tsx  ChatToolbar.tsx  MessageBlock.tsx  RunningIndicator.tsx  ToolCallCard.tsx
src/components/ui/: Chip.tsx  Divider.tsx  GhostBtn.tsx  Icons.tsx  InputField.tsx  Kbd.tsx  PrimaryBtn.tsx  SecondaryBtn.tsx  SegCtrl.tsx  StatusDot.tsx  Toggle.tsx  index.ts
src/lib/: cm-active-lines.ts  cm-codeblock.ts  cm-htmlwidget.ts  cm-hyperlinks.ts  cm-image.ts  cm-markdown-render.ts  cm-math.ts  cm-mermaid.ts  cm-theme.ts  cm-wikilinks.ts  file-types.ts  tauri.ts
src/lib/widget-runtime/: index.ts
src/styles/: forge-design.css
test-vault/: Strait_of_Hormuz_Updates.md  Welcome.md  comparative-analysis.md  france-military-comms.md  index.md  india-military-comms.md  indian-navy-infrastructure.md  israel-military-comms.md  matrix-protocol-analysis.md  procurement-paths.md  russia-military-comms.md  security-breaches.md  technical-architecture.md  us-military-comms.md  why-general-comms-matter.md
test-vault/Notes/: Ideas.md  TODO.md
