[package]
name = "forge"
version = "0.1.0"
edition = "2024"
license = "AGPL-3.0"
description = "A pure-Rust, GPU-accelerated markdown editor"

[dependencies]
dirs = "5"
gpui = "0.2.2"
image = { version = "0.25", default-features = false, features = ["png", "jpeg", "gif", "bmp", "webp"] }
smallvec = "1"
rusqlite = { version = "0.31", features = ["bundled"] }
usearch = "2"
ureq = { version = "2", features = ["json"] }
openssl = { version = "0.10", features = ["vendored"] }
candle-core = "0.8"
candle-nn = "0.8"
candle-transformers = "0.8"
hf-hub = "0.5"
tokenizers = "0.20"
gpui-component = "0.5"
notify = "7"
pulldown-cmark = "0.12"
ropey = "1.6"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
unicode-segmentation = "1.12"
llama-cpp-2 = { version = "0.1", features = ["vulkan"] }
