[package]
name = "forge"
version = "0.2.0"
edition = "2024"
license = "AGPL-3.0"
description = "Rust-backend markdown editor with AI research agent"

[lib]
name = "forge_lib"
# Desktop Tauri 2: the bin is what actually runs, so a plain rlib is
# all we need. cdylib/staticlib are mobile artifacts (iOS/Android) and
# would force PIE linking, which fails because nvcc-built CUDA objects
# in libggml-cuda.a use absolute relocations against libc symbols
# (R_X86_64_PC32 against `stderr`).
crate-type = ["rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-shell = "2"
tauri-plugin-notification = "2"

serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Backend deps preserved from the GPUI version
dirs = "5"
rusqlite = { version = "0.31", features = ["bundled"] }
ureq = { version = "2", features = ["json"] }
openssl = { version = "0.10", features = ["vendored"] }
notify = "7"
llama-cpp-2 = { version = "0.1", features = ["cuda"], optional = true }
hound = "3"
cpal = "0.15"
rand = "0.8"
byteorder = "1"
webrtc-vad = "0.4"
base64 = "0.22"
portable-pty = "0.8"

# Vault semantic search stack — usearch + candle embedder + tokenizers.
# Restricted to non-Windows targets because usearch 2.24's C++ shim
# references POSIX mmap symbols (MAP_FAILED, sys/mman.h) that MSVC
# doesn't have, causing cl.exe to fail with C3861/C2065. Linux + macOS
# get full vault search; Windows builds skip the entire subsystem
# (search.rs / embedder.rs / search commands all cfg-gated to match).
[target.'cfg(not(target_os = "windows"))'.dependencies]
usearch = { version = "2", default-features = false }
candle-core = "0.8"
candle-nn = "0.8"
candle-transformers = "0.8"
hf-hub = "0.5"
tokenizers = "0.20"

[features]
default = []

# Re-export tauri custom-protocol when building production bundle
custom-protocol = ["tauri/custom-protocol"]

# Bundle the local llama.cpp + CUDA inference runtime. Adds ~150-250 MB
# to the binary. Without this, the lite build is ~80% smaller and users
# run local LLMs via Ollama (over the openai_compat HTTP API). API
# providers (Anthropic / OpenAI / Gemini / Copilot) work in both builds.
local-llm = ["dep:llama-cpp-2"]
