[package]
name = "forge"
version = "0.2.0"
edition = "2024"
license = "AGPL-3.0"
description = "Rust-backend markdown editor with AI research agent"

[lib]
name = "forge_lib"
# Desktop Tauri 2: the bin is what actually runs, so a plain rlib is
# all we need. cdylib/staticlib are mobile artifacts (iOS/Android) and
# would force PIE linking, which fails because nvcc-built CUDA objects
# in libggml-cuda.a use absolute relocations against libc symbols
# (R_X86_64_PC32 against `stderr`).
crate-type = ["rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-shell = "2"
tauri-plugin-notification = "2"

serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Backend deps preserved from the GPUI version
dirs = "5"
rusqlite = { version = "0.31", features = ["bundled"] }
ureq = { version = "2", features = ["json"] }
openssl = { version = "0.10", features = ["vendored"] }
hound = "3"
cpal = "0.15"
rand = "0.8"
byteorder = "1"
webrtc-vad = "0.4"
base64 = "0.22"
portable-pty = "0.8"
# mimalloc as the global allocator. Default glibc malloc fragments
# heavily under our workload (chunked SQLite reads, candle tensors,
# embedder spans), and switching to mimalloc gives ~10-20% speedup
# on memory-heavy paths and lower steady-state RSS. Pure-Rust crate
# wrapper around Microsoft's mimalloc; no native deps to ship.
mimalloc = { version = "0.1", default-features = false }

# Vault semantic search stack — usearch + candle embedder + tokenizers.
# Restricted to non-Windows targets because usearch 2.24's C++ shim
# references POSIX mmap symbols (MAP_FAILED, sys/mman.h) that MSVC
# doesn't have, causing cl.exe to fail with C3861/C2065. Linux + macOS
# get full vault search; Windows builds skip the entire subsystem
# (search.rs / embedder.rs / search commands all cfg-gated to match).
[target.'cfg(not(target_os = "windows"))'.dependencies]
# fp16lib provides a portable FP16 fallback. Without it the bundled
# C++ uses GCC-specific `_Float16` which Ubuntu's gcc 11 rejects.
usearch = { version = "2", default-features = false, features = ["fp16lib"] }
candle-core = "0.8"
candle-nn = "0.8"
candle-transformers = "0.8"
hf-hub = "0.5"
tokenizers = "0.20"

[features]
default = []

# Re-export tauri custom-protocol when building production bundle
custom-protocol = ["tauri/custom-protocol"]
# Local LLM (llama.cpp/CUDA) inference is *not* part of Forge any more.
# Users wanting local models run Ollama and point Forge at it via the
# OpenAI-compatible HTTP path. A separate runtime (Hearth) handles
# embedded inference; keeping it out of Forge cuts ~150-250 MB of
# binary and ~30-60 s of cold compile.

# Release-build optimisation. LTO + codegen-units=1 + strip take ~30-60%
# off binary size and shave 10-20% off cold startup. We deliberately
# keep `panic = "unwind"` (the default): search.rs and commands.rs use
# std::panic::catch_unwind to contain embedder / usearch failures
# per-file during reindex. `panic = "abort"` would convert those into
# process aborts and a single corrupt PDF or weird DOCX would kill the
# whole app — net regression despite the marginal binary savings.
#
# Build time on a cold release goes up (LTO is the dominant cost);
# `cargo run --release` for dev iteration is unaffected because dev
# uses the `dev` profile, not release.
[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
debug = false
